Revert "Fixed font size and gap"
This reverts commit a1dfe3b59fa72e56ce43f50a4453e28c64f684d1.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,7 @@ iframe{
         height: 41px;
     }
     .balance {
-        font-size: 16px !important;
+        font-size: 14px !important;
     }
     #open-settings-dialog-button span {
         font-size: 14px;
